--- a/src/tbbbind/CMakeLists.txt
+++ b/src/tbbbind/CMakeLists.txt
@@ -98,8 +98,8 @@ if (NOT DEFINED HWLOC_TARGET_EXPLICITLY_DEFINED AND TARGET PkgConfig::HWLOC)
     message(STATUS "The ${TBBBIND_LIBRARY_NAME} target will be configured using the HWLOC ${HWLOC_VERSION}")
     tbbbind_build(${TBBBIND_LIBRARY_NAME} PkgConfig::HWLOC)
 else()
-    tbbbind_build(tbbbind     HWLOC::hwloc_1_11)
-    tbbbind_build(tbbbind_2_0 HWLOC::hwloc_2   )
-    tbbbind_build(tbbbind_2_5 HWLOC::hwloc_2_5 )
+    tbbbind_build(tbbbind            HWLOC::hwloc_static)
+    tbbbind_build(tbbbind_2_0        HWLOC::hwloc_2   )
+    tbbbind_build(tbbbind_2_5        HWLOC::hwloc_2_5 )
 endif()
 
