--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -284,6 +284,9 @@ function(tbb_add_tbbbind_test)
 
     # Make sure fake HWLOC is found before system one
     if (UNIX AND NOT TARGET HWLOC::hwloc_stub AND NOT TBB_TCM_TESTING)
+        # The idea is to produce fake HWLOC library and link it with the test
+        # to ensure that TBBBind won't be loaded in order to simulate the case
+        # when real HWLOC is not present in the system.
         file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/stubhwloc.cpp "void hwloc_stub(){}")
         add_library(hwloc_stub SHARED ${CMAKE_CURRENT_BINARY_DIR}/stubhwloc.cpp)
         add_library(HWLOC::hwloc_stub ALIAS hwloc_stub)
