Fix CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -391,6 +391,7 @@ jobs:
             -DTBB_TEST=OFF ..\
           cmake --build . -v --target tbb --target tbbmalloc --target tbbmalloc_proxy
       - name: Test doc examples
+        run: |
           cd ../doc/main/examples_testing
           mkdir build && cd build
           cmake -DCMAKE_CXX_STANDARD=${{ matrix.std }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
