Fix build library stage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -388,7 +388,7 @@ jobs:
           mkdir build && cd build
           cmake -DCMAKE_CXX_STANDARD=${{ matrix.std }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type}} \
             -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
-            -DTBB_TEST=OFF ..\
+            -DTBB_TEST=OFF ..
           cmake --build . -v --target tbb --target tbbmalloc --target tbbmalloc_proxy
       - name: Test doc examples
         run: |
