Add source vars

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -392,7 +392,7 @@ jobs:
           cmake --build . -v --target tbb --target tbbmalloc --target tbbmalloc_proxy
       - name: Test doc examples
         run: |
-          ls
+          source `find ./build -name vars.sh`
           cd doc/main/examples_testing
           mkdir build && cd build
           cmake -DCMAKE_CXX_STANDARD=${{ matrix.std }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
