--- a/doc/main/examples_testing/CMakeLists.txt
+++ b/doc/main/examples_testing/CMakeLists.txt
@@ -13,38 +13,36 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.11)
-project(doc_examples_testing)
+project(doc_examples_testing LANGUAGES CXX)
 
-set(_tbb_include_path "${CMAKE_CURRENT_SOURCE_DIR}/../../../include")
 set(_reference_examples_path "${CMAKE_CURRENT_SOURCE_DIR}/../reference/examples")
 set(_userguide_examples_path "${CMAKE_CURRENT_SOURCE_DIR}/../tbb_userguide/examples")
 
 add_custom_target(build-doc-examples
     COMMENT "Build oneTBB documentation samples")
+set(doc_examples_test_label "doc-examples")
 
-macro(add_example example_path)
-    message(STATUS "Adding ${_example_path}")
+macro(add_doc_example _doc_example_path)
+    message(STATUS "Adding ${_doc_example_path}")
 
-    get_filename_component(_example_name "${_example_path}" NAME_WE)
-    add_executable(${_example_name} EXCLUDE_FROM_ALL "${_example_path}")
+    get_filename_component(_doc_example_name "${_doc_example_path}" NAME_WE)
+    add_executable(${_doc_example_name} EXCLUDE_FROM_ALL "${_doc_example_path}")
 
-    target_include_directories(${_example_name} PRIVATE ${_tbb_include_path})
-    target_link_libraries(${_example_name} tbb)
-    target_link_libraries(${_example_name} tbbmalloc)
+    add_dependencies(${_doc_example_name} TBB::tbb TBB::tbbmalloc)
+    target_link_libraries(${_doc_example_name} TBB::tbb TBB::tbbmalloc)
 
-    add_dependencies(build-doc-examples ${_example_name})
-    add_test(NAME ${_example_name} COMMAND ${_example_name})
+    add_dependencies(build-doc-examples ${_doc_example_name})
+    add_test(NAME ${_doc_example_name} COMMAND ${_doc_example_name})
+    set_tests_properties(${_doc_example_name} PROPERTIES LABELS "${doc_examples_test_label}")
 endmacro()
 
 file(GLOB_RECURSE REFERENCE_EXAMPLES_LIST "${_reference_examples_path}/*.cpp")
 file(GLOB_RECURSE USERGUIDE_EXAMPLES_LIST "${_userguide_examples_path}/*.cpp")
 
-foreach(_example_path IN LISTS REFERENCE_EXAMPLES_LIST)
-    add_example(${_example_path})
+foreach(_doc_example_path IN LISTS REFERENCE_EXAMPLES_LIST)
+    add_doc_example(${_doc_example_path})
 endforeach()
 
-foreach(_example_path IN LISTS USERGUIDE_EXAMPLES_LIST)
-    add_example(${_example_path})
+foreach(_doc_example_path IN LISTS USERGUIDE_EXAMPLES_LIST)
+    add_doc_example(${_doc_example_path})
 endforeach()
-
-enable_testing()
