Separate Windows workflow, remove public CMake option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,6 @@ endif()
 
 option(TBB_TEST "Enable testing" ON)
 option(TBB_EXAMPLES "Enable examples" OFF)
-option(_TBB_DOC_EXAMPLES "Enable documentation examples" OFF)
 option(TBB_STRICT "Treat compiler warnings as errors" ON)
 option(TBB_WINDOWS_DRIVER "Build as Universal Windows Driver (UWD)" OFF)
 option(TBB_NO_APPCONTAINER "Apply /APPCONTAINER:NO (for testing binaries for Windows Store)" OFF)
@@ -331,12 +330,13 @@ if (TBB_EXAMPLES)
     add_subdirectory(examples)
 endif()
 
-set(TBB_DOC_EXAMPLES_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/doc/main/examples_testing")
 
-if (_TBB_DOC_EXAMPLES)
+if (TBB_DOC_EXAMPLES)
+    set(TBB_DOC_EXAMPLES_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/doc/main/examples_testing")
     if (NOT EXISTS ${TBB_DOC_EXAMPLES_DIRECTORY})
         message(FATAL_ERROR "Documentation examples are not found while testing was enabled")
     else()
+        enable_testing()
         add_subdirectory(${TBB_DOC_EXAMPLES_DIRECTORY})
     endif()
 endif()
