Apply review comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -336,6 +336,7 @@ if (TBB_DOC_EXAMPLES)
     if (NOT EXISTS ${TBB_DOC_EXAMPLES_DIRECTORY})
         message(FATAL_ERROR "Documentation examples are not found while testing was enabled")
     else()
+        message(STATUS "Enabling testing for examples from documentation")
         enable_testing()
         add_subdirectory(${TBB_DOC_EXAMPLES_DIRECTORY})
     endif()
