Revert "Disable malloc lib load/unload test"
This reverts commit 51c1a3df7fc7ff5ca7c53164880e9aea928f37a8.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -639,10 +639,10 @@ if (TARGET TBB::tbbmalloc)
             if (NOT (WINDOWS_STORE OR TBB_WINDOWS_DRIVER))
                 # TODO: Consider adding following tests on WINDOWS_STORE and TBB_WINDOWS_DRIVER platforms
                 tbb_add_test(SUBDIR tbbmalloc NAME test_malloc_compliance DEPENDENCIES TBB::tbbmalloc)
-                #tbb_add_lib_test(SUBDIR tbbmalloc NAME test_malloc_used_by_lib DEPENDENCIES TBB::tbbmalloc)
-                #tbb_add_test(SUBDIR tbbmalloc NAME test_malloc_used_by_lib DEPENDENCIES _test_malloc_used_by_lib)
-                #tbb_add_lib_test(SUBDIR tbbmalloc NAME test_malloc_lib_unload)
-                #tbb_add_test(SUBDIR tbbmalloc NAME test_malloc_lib_unload DEPENDENCIES _test_malloc_lib_unload)
+                tbb_add_lib_test(SUBDIR tbbmalloc NAME test_malloc_used_by_lib DEPENDENCIES TBB::tbbmalloc)
+                tbb_add_test(SUBDIR tbbmalloc NAME test_malloc_used_by_lib DEPENDENCIES _test_malloc_used_by_lib)
+                tbb_add_lib_test(SUBDIR tbbmalloc NAME test_malloc_lib_unload)
+                tbb_add_test(SUBDIR tbbmalloc NAME test_malloc_lib_unload DEPENDENCIES _test_malloc_lib_unload)
             endif()
 
             enable_language(C)
