--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run scan
         run: |
-          command -v clang-format-10
+          command -v clang-format-18
           cp -r examples examples_formatted
           find examples_formatted -regex '.*\.\(cpp\|hpp\)' -exec clang-format-10 -style=file -i {} \;
           diff -r examples examples_formatted
@@ -295,8 +295,8 @@ jobs:
             build_type: release
             preview: 'ON'
           - os: ubuntu-24.04
-            c_compiler: gcc-10
-            cxx_compiler: g++-10
+            c_compiler: gcc
+            cxx_compiler: g++
             std: 20
             build_type: debug
             preview: 'ON'
