Replace CPATH with C_INCLUDE_PATH and CPLUS_INCLUDE_PATH

--- a/integration/windows/env/vars.bat.in
+++ b/integration/windows/env/vars.bat.in
@@ -21,7 +21,8 @@ set "TBBROOT=@TBBROOT_REPLACEMENT@"
 set "TBB_DLL_PATH=@BINARY_PATH_REPLACEMENT@"
 
 set "INCLUDE=%TBBROOT%\include;%INCLUDE%"
-set "CPATH=%TBBROOT%\include;%CPATH%"
+set "C_INCLUDE_PATH=%TBBROOT%\include;%C_INCLUDE_PATH%"
+set "CPLUS_INCLUDE_PATH=%TBBROOT%\include;%CPLUS_INCLUDE_PATH%"
 set "LIB=@LIBRARY_PATH_REPLACEMENT@;%LIB%"
 set "PATH=@BINARY_PATH_REPLACEMENT@;%PATH%"
 set "PKG_CONFIG_PATH=@LIBRARY_PATH_REPLACEMENT@\pkgconfig;%PKG_CONFIG_PATH%"
