--- a/integration/linux/env/vars.sh.in
+++ b/integration/linux/env/vars.sh.in
@@ -18,7 +18,8 @@ export TBBROOT=@TBBROOT_REPLACEMENT@
 
 LD_LIBRARY_PATH="@LIBRARY_PATH_REPLACEMENT@:${LD_LIBRARY_PATH}"; export LD_LIBRARY_PATH
 LIBRARY_PATH="@LIBRARY_PATH_REPLACEMENT@:${LIBRARY_PATH}"; export LIBRARY_PATH
-CPATH="${TBBROOT}/include:${CPATH}"; export CPATH
+C_INCLUDE_PATH="${TBBROOT}/include:${C_INCLUDE_PATH}"; export C_INCLUDE_PATH
+CPLUS_INCLUDE_PATH="${TBBROOT}/include:${CPLUS_INCLUDE_PATH}"; export CPLUS_INCLUDE_PATH
 PKG_CONFIG_PATH="@LIBRARY_PATH_REPLACEMENT@/pkgconfig:${PKG_CONFIG_PATH}"; export PKG_CONFIG_PATH
 
 @CMAKE_ENVIRONMENT_SOURCING_STRING@
