--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -428,7 +428,10 @@ if (TARGET TBB::tbb)
     set_property(TARGET test_dynamic_link PROPERTY BUILD_RPATH_USE_ORIGIN TRUE)
     set_property(TARGET test_dynamic_link PROPERTY BUILD_RPATH "$ORIGIN")
     target_compile_definitions(test_dynamic_link PRIVATE "TBBLIB_NAME=\"$<TARGET_FILE_NAME:TBB::tbb>\"")
-    # set_property(TARGET test_dynamic_link PROPERTY BUILD_RPATH "$<TARGET_FILE_DIR:TBB::tbb>")
+    # Making unsigned library so that the test fails to load it
+    file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/stub_unsigned_lib.cpp "void foo(){}")
+    add_library(stub_unsigned SHARED ${CMAKE_CURRENT_BINARY_DIR}/stub_unsigned_lib.cpp)
+    add_dependencies(test_dynamic_link stub_unsigned)
 
     if (LINKER_HAS_NO_AS_NEEDED)
         # The linker may not detect a dependency on pthread in static variable constructors.
