Remove extra subdirs
Signed-off-by: Isaev, Ilya <ilya.isaev@intel.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -76,3 +76,7 @@ tbb_add_example(task_group sudoku)
 tbb_add_example(test_all fibonacci)
 
 tbb_add_example(migration recursive_fibonacci)
+
+tbb_add_example(sycl tbb-task-sycl)
+tbb_add_example(sycl tbb-async-sycl)
+tbb_add_example(sycl tbb-resumable-tasks-sycl)
