--- a/examples/sycl/tbb-resumable-tasks-sycl/CMakeLists.txt
+++ b/examples/sycl/tbb-resumable-tasks-sycl/CMakeLists.txt
@@ -12,16 +12,24 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cmake_minimum_required (VERSION 3.4)
-
 if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
-    set(CMAKE_CXX_COMPILER "icx-cl")
-    set(CMAKE_CXX_FLAGS "fsycl")
-
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /Qtbb")
 else()
-    set(CMAKE_CXX_COMPILER "icpx")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -qtbb")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -cl-opt-disable")
 endif()
 
-project (TBB-RESUMABLE-TASKS-SYCL LANGUAGES CXX)
-add_subdirectory (src)
+# Set default build type to RelWithDebInfo if not specified
+if (NOT CMAKE_BUILD_TYPE)
+    message (STATUS "Default CMAKE_BUILD_TYPE not. Set using Release with Debug Info")
+    set (CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE
+        STRING "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel"
+        FORCE)
+endif()
+
+add_executable (tbb-resumable-tasks-sycl tbb-resumable-tasks-sycl.cpp)
+
+find_package(Threads REQUIRED)
+target_link_libraries(tbb-resumable-tasks-sycl Threads::Threads)
+
+add_custom_target (run ./tbb-resumable-tasks-sycl)
