Fix folder name

--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -73,7 +73,7 @@ jobs:
           curl https://scan.coverity.com/download/cxx/win64 -o cov-win64-tool.zip -d "token=${{secrets.COVERITY_TOKEN}}&project=${{env.COVERITY_PROJECT}}"
           7z x cov-win64-tool.zip
           del cov-win64-tool.zip
-          move cov-win64-tool* cov-win64-tool
+          move cov-analysis-win64* cov-win64-tool
       - name: Build with cov-build
         shell: bash
         run: |
