--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -81,7 +81,7 @@ jobs:
           cmake -DCMAKE_CXX_STANDARD=14 -DCMAKE_BUILD_TYPE=relwithdebinfo \
             -DCMAKE_CXX_COMPILER=cl -DCMAKE_C_COMPILER=cl -DTBB_CPF=ON .
           cov-configure --msvc
-          cov-build --dir cov-int msbuild ALL_BUILD.vcxproj -m:${{env.BUILD_CONCURRENCY}} -v:n
+          cov-build --dir cov-int msbuild.exe ALL_BUILD.vcxproj -m:${{env.BUILD_CONCURRENCY}} -v:n
       - name: Archive Coverity build results
         run: |
           cd build
